# brain_uav_paper2

./: .gitignore  README.md  pyproject.toml
configs/: env.yaml  env_phase3_task_v1.0.2.yaml  experiment.yaml  phase1b_baseline_runs.json  phase3a_snn_runs.json  render.yaml  render_stage2.yaml  render_stage2_c_pre_v1.yaml  render_stage2_c_v1.yaml  render_stage2_c_v2.yaml  render_stage2_pilot_v1.yaml  vision.yaml
docs/: data_change_log.md  phase0_freeze.md  phase1a_dynamic_env.md  phase1b_baseline_criteria.md  phase1b_public_data_prep.md  phase1b_seadronessee_freeze_note.md  phase3_minimal_closed_loop_runbook.md  phase3a_snn_freeze_note.md  stage2_final_spec.md  stage2_rendering_spec.md  stage2c_formal_runbook.md
scripts/: audit_phase3_closed_loop_pairing.py  build_stage2_asset_manifest.py  check_interface.py  check_paper1_bridge.py  check_phase0b.py  check_phase1a.py  check_phase1b_seadronessee.py  check_phase3_target_motion.py  check_phase3_task_dataset.py  check_phase3_task_sampler.py  check_stage2_assets.py  check_stage2_rendered.py  check_stage2_scale_distribution.py  check_stage2_temporal_continuity.py  debug_snn_heatmap_overfit.py  estimate_phase3_vision_synops.py  eval_public_vision.py  eval_public_vision_cnn.py  eval_public_vision_snn.py  eval_stage2_pilot_cnn.py  eval_stage2_pilot_snn.py  eval_stage2_pilot_snn_heatmap.py  freeze_phase3_closed_loop_manifest.py  freeze_stage2_pilot_run.py  generate_stage2_water_masks.py  inspect_seadronessee_sot.py  inspect_stage2_temporal_violations.py  make_stage2_contact_sheets.py  make_stage2_stage_background_sheets.py  (+29 more)
(+107 files in other folders)
