[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-uav-paper2"
version = "0.1.0"
description = "Independent scaffold for paper2 experiments"
requires-python = ">=3.10,<3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]